Safari round button issue on IOS9

--- a/rangoli/wp-content/themes/rangoli/css/custom.css
+++ b/rangoli/wp-content/themes/rangoli/css/custom.css
@@ -2105,3 +2105,8 @@ button.next-confirmation-page {
 .single_post.span4:nth-child(3n+1){
     clear: left;
 }
+input[type="button"], input[type="submit"] {
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
